# defi-launch-safety-kit

./: .env.example  .gitignore  GITHUB_PUBLISH.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: launch-readiness-review.md
.github/workflows/: ci.yml
docs/: ai-assisted-launch-readiness-workflow.md  demo-visual-assets.md  github-marketing-playbook.md  github-profile-readme-snippet.md  github-profile-readme.md  launch-review-service-one-pager.md  linkedin-launch-post.md  sample-report-preview.html  structured-imports.md  v1.2-notes.md
docs/ai-review-prompts/: 01-owner-admin-review.md  02-tokenomics-risk-review.md  03-upgradeability-review.md  04-launch-blocker-review.md  05-audit-prep-summary.md  README.md
docs/articles/: 20-erc20-launch-risks.md
docs/case-studies/: demo-erc20-launch-review.md
docs/linkedin-posts/: demo-case-study-post.md  erc20-launch-risks-post.md
docs/marketing/: day-1-linkedin-launch-checklist.md  first-20-targets-playbook.md  first-target-candidates-2026-06-24.md  linkedin-launch-post-variants.md  low-pressure-feedback-targets-2026-06-24.md  outreach-templates.md  seven-day-review-template.md  target-assessment-2026-06-24.md  target-outreach-tracker.md  three-action-execution-plan-2026-06-24.md
docs/marketing/readiness-notes/: lrvoron-bomtok-erc20.md  orien7-uday-erc20-staking.md
examples/contracts/: RiskyToken.sol  SafeToken.sol  UpgradeableTokenExample.sol
examples/structured/: slither-report.json
src/dlsk/: cli.py
tests/: test_ai_pack.py  test_cli_smoke.py
