[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-launch-safety-kit"
version = "0.1.0"
description = "A lightweight pre-audit and launch safety review toolkit for DeFi and token projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zhu Dapeng" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "jinja2>=3.1.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
dlsk = "dlsk.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
