[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-launch-safety-kit"
version = "1.3.0"
description = "An AI-assisted pre-audit launch-readiness workflow for DeFi and token projects."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zhu Dapeng" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.9",
  "rich>=13",
  "pydantic>=2",
  "jinja2>=3",
  "requests>=2",
  "pyyaml>=6"
]

[project.optional-dependencies]
dev = ["pytest>=8"]
slither = ["slither-analyzer>=0.10"]

[project.scripts]
dlsk = "dlsk.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dlsk = ["report/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
